--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
             from { opacity: 0; transform: translateY(10px); }
             to { opacity: 1; transform: translateY(0); }
         }
+
+        /* Timeline specific */
+        .timeline-line {
+            width: 2px;
+            background: linear-gradient(to bottom, transparent, var(--bronze-gold), transparent);
+        }
     </style>
 </head>
 <body>
@@ -63,7 +69,7 @@
                 「順著天賦拍，流量自然來」
             </p>
             <div class="flex justify-center gap-4">
-                <a href="#about" class="px-10 py-4 rounded-full text-base tracking-widest border border-[#c9a67a] gold-text hover:bg-[#c9a67a] hover:text-[#3d332d] transition-all duration-300 font-bold inline-block">
+                <a href="#about" class="px-10 py-4 rounded-full text-base tracking-widest border border-[#c9a67a] gold-text hover:bg-[#c9a67a] hover:text-[#3d332d] transition-all duration-300 font-bold inline-block text-center">
                     立即探索靈魂腳本
                 </a>
             </div>
@@ -74,14 +80,14 @@
     <section id="about" class="py-24 container mx-auto px-6 max-w-5xl">
         <div class="text-center mb-20">
             <h2 class="text-3xl md:text-4xl mb-8 font-medium gold-text">宇宙法則與自我連結</h2>
-            <p class="leading-relaxed text-xl md:text-2xl opacity-90 font-light">
-                在宇宙法則的定律中，每一個靈魂都有屬於自己獨特魅力，只是缺少了一些與自己的連結。
+            <p class="leading-relaxed text-xl md:text-2xl opacity-90 font-light text-center">
+                在宇宙法則的定律中，每一個靈魂都有屬於自己獨特魅力，只是缺少了一些與自己的連結。<br class="hidden md:block">
                 短影音並非只是追求流量與變現，而是真實展現獨特價值，擴散影響力的過程。
             </p>
         </div>
         
         <div class="grid md:grid-cols-2 gap-12 mt-16 items-stretch">
-            <div class="p-10 border border-[#c9a67a4d] rounded-3xl bg-[#3d332d] flex flex-col justify-center shadow-xl">
+            <div class="p-10 border border-[#c9a67a4d] rounded-3xl bg-[#3d332d] flex flex-col justify-center shadow-xl text-left">
                 <h3 class="text-2xl mb-6 font-bold gold-text">看見流量之外的價值</h3>
                 <p class="opacity-90 text-base md:text-lg leading-relaxed">
                     目前市場上的短影音多以「變現」為主。但在變現之前，我們想協助您補上最關鍵的一塊——將真實的您呈現於影音中。
@@ -101,6 +107,75 @@
                     <div>
                         <p class="text-lg font-bold">靈魂腳本建議</p>
                         <p class="text-base opacity-70">減少拍攝阻力，不費力地創作</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Brand Story Timeline -->
+    <section class="py-24 bg-[#3d332d] overflow-hidden">
+        <div class="container mx-auto px-6 max-w-4xl">
+            <div class="text-center mb-16">
+                <h2 class="text-3xl md:text-4xl font-light mb-4 gold-text">品牌足跡</h2>
+                <p class="opacity-60 text-lg">一段從髮品深耕到影音賦能的旅程</p>
+            </div>
+
+            <div class="relative">
+                <!-- Vertical Line -->
+                <div class="absolute left-4 md:left-1/2 transform md:-translate-x-1/2 timeline-line h-full"></div>
+
+                <div class="space-y-16">
+                    <!-- Item 2007 -->
+                    <div class="relative flex items-center justify-between md:justify-normal group">
+                        <div class="hidden md:block w-1/2 pr-12 text-right">
+                            <h4 class="text-4xl font-serif-italic gold-text mb-2 opacity-30 group-hover:opacity-100 transition-opacity">2007</h4>
+                        </div>
+                        <div class="absolute left-4 md:left-1/2 transform -translate-x-1/2 w-4 h-4 rounded-full gold-bg border-4 border-[#3d332d] z-10 shadow-[0_0_15px_rgba(201,166,122,0.5)]"></div>
+                        <div class="w-full md:w-1/2 pl-12 md:pl-12 text-left">
+                            <span class="md:hidden text-2xl font-serif-italic gold-text block mb-1">2007</span>
+                            <h3 class="text-xl font-bold mb-2">品牌創立</h3>
+                            <p class="opacity-70 text-base leading-relaxed">RENATA 蕾娜塔髮品誕生，開始深耕美髮產業，奠定專業品牌根基。</p>
+                        </div>
+                    </div>
+
+                    <!-- Item 2022 -->
+                    <div class="relative flex items-center justify-between md:justify-normal flex-row-reverse group">
+                        <div class="hidden md:block w-1/2 pl-12 text-left">
+                            <h4 class="text-4xl font-serif-italic gold-text mb-2 opacity-30 group-hover:opacity-100 transition-opacity">2022</h4>
+                        </div>
+                        <div class="absolute left-4 md:left-1/2 transform -translate-x-1/2 w-4 h-4 rounded-full gold-bg border-4 border-[#3d332d] z-10 shadow-[0_0_15px_rgba(201,166,122,0.5)]"></div>
+                        <div class="w-full md:w-1/2 pl-12 md:pl-0 md:pr-12 text-left md:text-right">
+                            <span class="md:hidden text-2xl font-serif-italic gold-text block mb-1">2022</span>
+                            <h3 class="text-xl font-bold mb-2">影音賦能</h3>
+                            <p class="opacity-70 text-base leading-relaxed">品牌行銷體系啟動專業影片內容經營，透過影像傳遞美髮美學。</p>
+                        </div>
+                    </div>
+
+                    <!-- Item 2025 - Updated Content -->
+                    <div class="relative flex items-center justify-between md:justify-normal group">
+                        <div class="hidden md:block w-1/2 pr-12 text-right">
+                            <h4 class="text-4xl font-serif-italic gold-text mb-2 opacity-30 group-hover:opacity-100 transition-opacity">2025</h4>
+                        </div>
+                        <div class="absolute left-4 md:left-1/2 transform -translate-x-1/2 w-4 h-4 rounded-full gold-bg border-4 border-[#3d332d] z-10 shadow-[0_0_15px_rgba(201,166,122,0.5)]"></div>
+                        <div class="w-full md:w-1/2 pl-12 md:pl-12 text-left">
+                            <span class="md:hidden text-2xl font-serif-italic gold-text block mb-1">2025</span>
+                            <h3 class="text-xl font-bold mb-2">啟動專案服務</h3>
+                            <p class="opacity-70 text-base leading-relaxed">提供全年度優惠體驗方案，期望能開始協助創作者建立內容，並根據市場脈動精準校正，傾聽創作者聲音。</p>
+                        </div>
+                    </div>
+
+                    <!-- Item 2026 -->
+                    <div class="relative flex items-center justify-between md:justify-normal flex-row-reverse group">
+                        <div class="hidden md:block w-1/2 pl-12 text-left">
+                            <h4 class="text-4xl font-serif-italic gold-text mb-2 opacity-30 group-hover:opacity-100 transition-opacity">2026</h4>
+                        </div>
+                        <div class="absolute left-4 md:left-1/2 transform -translate-x-1/2 w-4 h-4 rounded-full gold-bg border-4 border-[#3d332d] z-10 shadow-[0_0_15px_rgba(201,166,122,0.5)]"></div>
+                        <div class="w-full md:w-1/2 pl-12 md:pl-0 md:pr-12 text-left md:text-right">
+                            <span class="md:hidden text-2xl font-serif-italic gold-text block mb-1">2026</span>
+                            <h3 class="text-xl font-bold mb-2">全新企劃：順勢沙龍</h3>
+                            <p class="opacity-70 text-base leading-relaxed font-bold">致力於協助創作者順應天賦綻放，累積具價值的數位資產，開啟短影音新紀元。</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -181,11 +256,12 @@
                 </div>
                 <div class="flex bg-[#3d332d] p-1.5 rounded-full border border-[#c9a67a4d] shadow-inner">
                     <button onclick="switchTab('trial')" id="btn-trial" class="tab-btn px-8 py-3 rounded-full text-sm font-bold transition-all bg-[#c9a67a] text-[#3d332d]">試拍方案</button>
-                    <button onclick="switchTab('starter')" id="btn-starter" class="tab-btn px-8 py-3 rounded-full text-sm font-bold transition-all text-white opacity-60">入門方案</button>
-                    <button onclick="switchTab('subscription')" id="btn-subscription" class="tab-btn px-8 py-3 rounded-full text-sm font-bold transition-all text-white opacity-60">訂閱方案</button>
+                    <button onclick="switchTab('starter')" id="btn-starter" class="tab-btn px-8 py-3 rounded-full text-sm font-bold transition-all text-white opacity-60 hover:opacity-100">入門方案</button>
+                    <button onclick="switchTab('subscription')" id="btn-subscription" class="tab-btn px-8 py-3 rounded-full text-sm font-bold transition-all text-white opacity-60 hover:opacity-100">訂閱方案</button>
                 </div>
             </div>
 
+            <!-- Tab Contents -->
             <div id="content-trial" class="tab-content active bg-[#3d332d] border border-[#c9a67a33] rounded-[48px] p-10 md:p-16 flex flex-col md:flex-row gap-16 items-center shadow-2xl relative">
                 <div class="md:w-1/3 text-center md:text-left">
                     <h3 class="text-4xl font-light mb-4">試拍方案</h3>
@@ -248,16 +324,16 @@
                     <p class="font-bold mb-1 gold-text">注意事項：</p>
                     * 價格皆含稅，車資另計。新竹以北 $1,000 / 新竹以南 $3,000 / 嘉義以南 $5,000
                 </div>
-                <button class="whitespace-nowrap flex items-center gap-3 px-10 py-5 gold-bg text-[#3d332d] rounded-full text-lg font-black hover:shadow-[0_0_35px_rgba(201,166,122,0.6)] transition-all transform hover:-translate-y-1">
+                <a href="#" class="whitespace-nowrap flex items-center gap-3 px-10 py-5 gold-bg text-[#3d332d] rounded-full text-lg font-black hover:shadow-[0_0_35px_rgba(201,166,122,0.6)] transition-all transform hover:-translate-y-1 text-center">
                     查看方案範本 <i data-lucide="arrow-right" class="w-6 h-6"></i>
-                </button>
+                </a>
             </div>
         </div>
     </section>
 
     <!-- Five Stages Journey -->
     <section class="py-24 bg-[#342c27] border-y border-[#c9a67a1a]">
-        <div class="container mx-auto px-6 overflow-hidden">
+        <div class="container mx-auto px-6 overflow-hidden text-center">
             <div class="text-center mb-20">
                 <h2 class="text-4xl md:text-5xl font-light mb-6 gold-text">天賦綻放：五大成長階段</h2>
                 <p class="text-xl opacity-80 font-light max-w-2xl mx-auto">從種子到開花的實戰過程，結合大腦使用技術協助您全方位提升</p>
@@ -295,7 +371,7 @@
         <div class="grid lg:grid-cols-3 gap-20 items-start">
             <div>
                 <h2 class="text-3xl font-light mb-8 tracking-[0.3em] uppercase">RENATA</h2>
-                <p class="text-lg opacity-80 leading-loose font-light">蕾娜塔髮品深耕美髮產業。自 2022 年起經營專業影片內容，2026 年全面啟動短影音全新企劃，致力於協助創作者順應天賦綻放，累積具價值的數位資產。</p>
+                <p class="text-lg opacity-80 leading-loose font-light">蕾娜塔髮品深耕美髮產業。致力於協助創作者順應天賦綻放，透過專業影像服務與分析，協助每一位客戶累積具價值的數位資產。</p>
             </div>
             <div>
                 <h3 class="gold-text text-base font-black mb-8 tracking-[0.3em] uppercase border-b border-[#c9a67a33] pb-2 inline-block">服務細則與回饋</h3>
@@ -305,12 +381,16 @@
                     <li class="flex items-start gap-5"><i data-lucide="award" class="gold-text w-6 h-6 mt-1"></i><div><p class="font-bold">長期訂閱回饋</p><p class="text-base opacity-70">回饋優惠享單月金額打 7 折 ($21,000)</p></div></li>
                 </ul>
             </div>
-            <div class="p-10 gold-bg-soft rounded-[40px] border border-[#c9a67a33] shadow-xl">
+            <div class="p-10 gold-bg-soft rounded-[40px] border border-[#c9a67a33] shadow-xl text-left">
                 <h3 class="text-2xl font-bold mb-6">預約您的靈魂導航</h3>
-                <p class="text-lg opacity-80 mb-8 italic">「每次的校正，都是來自於對您真實狀態的觀察。」</p>
+                <p class="text-lg opacity-80 mb-8 italic text-left">「每次的校正，都是來自於對您真實狀態的觀察。」</p>
                 <div class="space-y-5">
-                    <button class="w-full py-5 gold-bg text-[#3d332d] rounded-2xl text-lg font-black tracking-[0.2em] hover:brightness-110 transition-all shadow-lg">LINE 專人預約</button>
-                    <button class="w-full py-5 bg-transparent border border-[#c9a67a66] text-white rounded-2xl text-lg font-bold tracking-[0.1em] hover:border-[#c9a67a] transition-all">索取詳細企劃書 (PDF)</button>
+                    <a href="https://line.me/R/ti/p/@your_id" target="_blank" class="w-full py-5 gold-bg text-[#3d332d] rounded-2xl text-lg font-black tracking-[0.2em] hover:brightness-110 transition-all shadow-lg flex justify-center items-center text-center font-bold">
+                        LINE 專人預約
+                    </a>
+                    <a href="path/to/your/file.pdf" target="_blank" class="w-full py-5 bg-transparent border border-[#c9a67a66] text-white rounded-2xl text-lg font-bold tracking-[0.1em] hover:border-[#c9a67a] transition-all flex justify-center items-center text-center">
+                        索取詳細企劃書 (PDF)
+                    </a>
                 </div>
             </div>
         </div>
