--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="group p-10 rounded-[32px] border border-white/5 bg-[#3d332d] shadow-lg text-left">
                     <div class="mb-8 gold-text group-hover:scale-110 transition-all"><i data-lucide="compass" class="w-10 h-10"></i></div>
                     <h3 class="text-2xl font-bold mb-3">紫微斗數：柔性解盤</h3>
-                    <p class="text-base opacity-80 mb-8 leading-relaxed font-light text-left">解析天賦找到個人導航方向與靈魂腳本。</p>
+                    <p class="text-base opacity-80 mb-8 leading-relaxed font-light text-left">協助你找到個人創作定位與靈魂腳本。</p>
                     <button onclick="window.openAstrologyModal()" class="text-sm gold-text font-bold underline underline-offset-4 flex items-center gap-1">了解詳情 <i data-lucide="chevron-right" class="w-4 h-4"></i></button>
                 </div>
                 <div class="group p-10 rounded-[32px] border border-white/5 bg-[#3d332d] shadow-lg text-left">
@@ -273,7 +273,7 @@
                 </div>
                 <div class="relative z-10 flex md:flex-col items-center md:items-start gap-8 md:gap-6 md:w-1/5 group text-left">
                     <div class="w-14 h-14 rounded-full flex items-center justify-center bg-[#3d332d] border-2 border-[#c9a67a] group-hover:gold-bg group-hover:text-[#3d332d] transition-all duration-300 text-xl font-black">2</div>
-                    <div><p class="text-xs gold-text font-black tracking-widest mb-1 uppercase text-left">萌芽</p><h4 class="text-xl font-bold mb-2">主題</h4><p class="text-sm opacity-60 leading-relaxed font-light text-left">創建適合您的核心主題</p></div>
+                    <div><p class="text-xs gold-text font-black tracking-widest mb-1 uppercase text-left">萌芽</p><h4 class="text-xl font-bold mb-2 text-left">主題</h4><p class="text-sm opacity-60 leading-relaxed font-light text-left">創建適合您的核心主題</p></div>
                 </div>
                 <div class="relative z-10 flex md:flex-col items-center md:items-start gap-8 md:gap-6 md:w-1/5 group text-left">
                     <div class="w-14 h-14 rounded-full flex items-center justify-center bg-[#3d332d] border-2 border-[#c9a67a] group-hover:gold-bg group-hover:text-[#3d332d] transition-all duration-300 text-xl font-black">3</div>
@@ -380,7 +380,12 @@
             <button onclick="window.closeModal()" class="absolute top-8 right-8 text-white opacity-40 hover:opacity-100 z-50 p-2 text-left text-left text-left"><i data-lucide="x" class="w-10 h-10 text-left"></i></button>
             <div class="p-8 md:p-16">
                 <div class="flex flex-col lg:flex-row gap-12 lg:items-start text-left">
-                    <div class="w-full lg:w-[400px] shrink-0 text-left text-left"><div class="aspect-[9/16] bg-black rounded-3xl overflow-hidden border border-[#c9a67a33] shadow-2xl relative text-left text-left text-left text-left text-left"><div id="modal-video-container" class="w-full h-full flex items-center justify-center text-left text-left"></div></div></div>
+                    <!-- Updated Video Container for Mobile alignment -->
+                    <div class="w-full max-w-[280px] sm:max-w-[320px] lg:w-[400px] mx-auto lg:mx-0 shrink-0">
+                        <div class="aspect-[9/16] bg-black rounded-3xl overflow-hidden border border-[#c9a67a33] shadow-2xl relative">
+                            <div id="modal-video-container" class="absolute inset-0 w-full h-full flex items-center justify-center"></div>
+                        </div>
+                    </div>
                     <div class="flex-1 flex flex-col justify-center h-full text-left">
                         <h2 id="modal-title" class="text-4xl gold-text font-light mb-4 text-left">方案範本</h2>
                         <div class="mb-8 text-left"><span class="target-label text-left text-left text-left">建議對象</span><p id="modal-target" class="text-xl font-bold opacity-95 text-left text-left text-left"></p></div>
@@ -396,7 +401,7 @@
     </div>
 
     <!-- Astrology Modal -->
-    <div id="astrology-modal" class="modal-overlay fixed inset-0 hidden flex items-center justify-center p-4 md:p-12 text-left">
+    <div id="astrology-modal" class="modal-overlay fixed inset-0 hidden flex items-center justify-center p-4 md:p-12 text-left text-left">
         <div class="modal-content bg-[#3d332d] w-full max-w-4xl rounded-[48px] shadow-2xl relative text-left text-left">
             <button onclick="window.closeAstrologyModal()" class="absolute top-8 right-8 text-white opacity-40 hover:opacity-100 z-50 p-2 text-left text-left text-left text-left text-left"><i data-lucide="x" class="w-10 h-10 text-left text-left text-left text-left text-left text-left"></i></button>
             <div class="p-8 md:p-16 text-center text-center text-center text-center text-center">
@@ -494,8 +499,8 @@
                 featureList.appendChild(li);
             });
             lucide.createIcons();
-            // Injects correct video preview URL
-            document.getElementById('modal-video-container').innerHTML = `<iframe class="w-full h-full" src="${data.videoURL}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`;
+            // Injects correct video preview URL with absolute positioning for alignment
+            document.getElementById('modal-video-container').innerHTML = `<iframe class="absolute inset-0 w-full h-full" src="${data.videoURL}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`;
             document.getElementById('sample-modal').classList.remove('hidden');
             document.body.style.overflow = 'hidden';
         };
