--- a/index.html
+++ b/index.html
@@ -160,10 +160,12 @@
         <div class="container mx-auto relative z-10 py-20">
             <p class="gold-text tracking-[0.4em] mb-6 text-sm md:text-lg font-medium uppercase text-center">2026 RENATA 蕾娜塔髮品 全新企劃</p>
             <h1 class="text-5xl md:text-8xl font-light mb-8 tracking-tight text-center">順勢影音<span class="gold-text">沙龍</span></h1>
-            <!-- Marketing Tweak: Stronger Benefit Subheadline -->
-            <p class="text-xl md:text-3xl font-serif-italic mb-12 opacity-90 leading-relaxed text-center">
-                「不必演戲、順著天賦，讓流量自然來」
+            
+            <!-- Reverted Subheadline -->
+            <p class="text-xl md:text-3xl font-serif-italic mb-8 opacity-90 leading-relaxed text-center">
+                「順著天賦拍，流量自然來」
             </p>
+
             <div class="flex flex-col sm:flex-row justify-center gap-4 text-center">
                 <a href="#event-march" class="px-10 py-5 rounded-full text-base md:text-lg tracking-widest bg-[#c9a67a] text-[#3d332d] font-black shadow-xl active:scale-95 transition-all text-center whitespace-nowrap">預約 3/25-26 體驗課程</a>
                 <a href="#plans" class="px-10 py-5 rounded-full text-base md:text-lg tracking-widest border border-[#c9a67a] gold-text font-black active:scale-95 transition-all text-center whitespace-nowrap">深入了解拍攝方案</a>
@@ -181,19 +183,11 @@
                 <div class="text-center"><span class="block text-2xl font-serif-italic gold-text font-bold mb-1">2026</span><h4 class="text-xs uppercase font-bold opacity-60 tracking-widest">沙龍正式啟動</h4></div>
             </div>
             
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-12 border-t border-white/5">
-                <div class="p-6 text-center">
-                    <span class="block text-4xl md:text-5xl font-black gold-text mb-2">500+</span>
-                    <p class="text-sm opacity-70">合作美業設計師</p>
-                </div>
-                <div class="p-6 text-center border-t md:border-t-0 md:border-l border-white/5">
-                    <span class="block text-4xl md:text-5xl font-black gold-text mb-2">300%</span>
-                    <p class="text-sm opacity-70">學員平均流量成長</p>
-                </div>
-                <div class="p-6 text-center border-t md:border-t-0 md:border-l border-white/5">
-                    <span class="block text-4xl md:text-5xl font-black gold-text mb-2">100%</span>
-                    <p class="text-sm opacity-70">鏡頭恐懼克服率</p>
-                </div>
+            <!-- REPLACED: Stats Grid with Text Banner -->
+            <div class="pt-16 border-t border-white/5 text-center">
+                <p class="text-2xl md:text-4xl font-serif-italic gold-text font-bold tracking-widest opacity-90">
+                    「降低你拍片阻力，持續累積影響力」
+                </p>
             </div>
         </div>
     </section>
