--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <section class="relative min-h-[85vh] flex items-center justify-center overflow-hidden border-b border-[#c9a67a33] px-6 text-center">
         <div class="absolute inset-0 opacity-20 pointer-events-none" style="background: radial-gradient(circle at center, var(--bronze-gold) 0%, transparent 75%);"></div>
         <div class="container mx-auto relative z-10 py-20">
-            <p class="gold-text tracking-[0.4em] mb-6 text-sm md:text-lg font-medium uppercase text-center">2026 RENATA蕾那塔髮品全新企劃</p>
+            <p class="gold-text tracking-[0.4em] mb-6 text-sm md:text-lg font-medium uppercase text-center">2026 RENATA蕾娜塔髮品全新企劃</p>
             <h1 class="text-5xl md:text-8xl font-light mb-8 tracking-tight text-center">順勢影音<span class="gold-text">沙龍</span></h1>
             
             <p class="text-2xl md:text-4xl font-serif-italic mb-6 opacity-90 leading-relaxed text-center gold-text">
