--- a/index.html
+++ b/index.html
@@ -277,42 +277,42 @@
         </div>
     </section>
 
-    <!-- NEW: Our Features (我們的特色) -->
-    <section class="py-20 md:py-32 bg-[#3d332d] border-t border-white/5 relative overflow-hidden">
+    <!-- NEW: Our Features (我們的特色) - Further Compacted -->
+    <section class="py-12 md:py-16 bg-[#3d332d] border-t border-white/5 relative overflow-hidden">
         <div class="absolute inset-0 opacity-10 pointer-events-none" style="background: radial-gradient(circle at center, #c9a67a 0%, transparent 60%);"></div>
         <div class="container mx-auto px-6 max-w-4xl text-center relative z-10">
-            <h2 class="text-2xl md:text-4xl font-light mb-8 leading-tight">
+            <h2 class="text-lg md:text-2xl font-light mb-4 leading-tight">
                 短影音時代，流量很兇，<br>
                 但你更需要的是<br>
-                <span class="gold-text text-3xl md:text-5xl font-bold mt-4 block">「建立專屬於你的品牌磁場」</span>
+                <span class="gold-text text-xl md:text-3xl font-bold mt-2 block">「建立專屬於你的品牌磁場」</span>
             </h2>
             
-            <div class="w-16 h-1 gold-bg mx-auto mb-12 opacity-50"></div>
+            <div class="w-12 h-0.5 gold-bg mx-auto mb-6 opacity-50"></div>
 
-            <p class="text-xl font-bold mb-10 opacity-90">我們協助你——</p>
+            <p class="text-base font-bold mb-6 opacity-90">我們協助你——</p>
 
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-16">
-                <div class="p-8 rounded-3xl bg-white/5 border border-[#c9a67a]/20 flex flex-col items-center hover:border-[#c9a67a] transition-all duration-500 hover:-translate-y-1 shadow-lg">
-                    <div class="w-14 h-14 rounded-full bg-[#c9a67a]/20 flex items-center justify-center mb-4 text-[#c9a67a]">
-                        <i data-lucide="search" class="w-7 h-7"></i>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8">
+                <div class="p-5 rounded-2xl bg-white/5 border border-[#c9a67a]/20 flex flex-col items-center hover:border-[#c9a67a] transition-all duration-500 hover:-translate-y-1 shadow-lg">
+                    <div class="w-10 h-10 rounded-full bg-[#c9a67a]/20 flex items-center justify-center mb-3 text-[#c9a67a]">
+                        <i data-lucide="search" class="w-5 h-5"></i>
                     </div>
-                    <h3 class="text-xl font-bold">挖掘你的<br>核心特質</h3>
+                    <h3 class="text-base font-bold">挖掘你的<br>核心特質</h3>
                 </div>
-                <div class="p-8 rounded-3xl bg-white/5 border border-[#c9a67a]/20 flex flex-col items-center hover:border-[#c9a67a] transition-all duration-500 hover:-translate-y-1 shadow-lg">
-                    <div class="w-14 h-14 rounded-full bg-[#c9a67a]/20 flex items-center justify-center mb-4 text-[#c9a67a]">
-                        <i data-lucide="sparkles" class="w-7 h-7"></i>
+                <div class="p-5 rounded-2xl bg-white/5 border border-[#c9a67a]/20 flex flex-col items-center hover:border-[#c9a67a] transition-all duration-500 hover:-translate-y-1 shadow-lg">
+                    <div class="w-10 h-10 rounded-full bg-[#c9a67a]/20 flex items-center justify-center mb-3 text-[#c9a67a]">
+                        <i data-lucide="sparkles" class="w-5 h-5"></i>
                     </div>
-                    <h3 class="text-xl font-bold">放大你的<br>個人魅力</h3>
+                    <h3 class="text-base font-bold">放大你的<br>個人魅力</h3>
                 </div>
-                <div class="p-8 rounded-3xl bg-white/5 border border-[#c9a67a]/20 flex flex-col items-center hover:border-[#c9a67a] transition-all duration-500 hover:-translate-y-1 shadow-lg">
-                    <div class="w-14 h-14 rounded-full bg-[#c9a67a]/20 flex items-center justify-center mb-4 text-[#c9a67a]">
-                        <i data-lucide="gem" class="w-7 h-7"></i>
+                <div class="p-5 rounded-2xl bg-white/5 border border-[#c9a67a]/20 flex flex-col items-center hover:border-[#c9a67a] transition-all duration-500 hover:-translate-y-1 shadow-lg">
+                    <div class="w-10 h-10 rounded-full bg-[#c9a67a]/20 flex items-center justify-center mb-3 text-[#c9a67a]">
+                        <i data-lucide="gem" class="w-5 h-5"></i>
                     </div>
-                    <h3 class="text-xl font-bold">轉化你的<br>專業價值</h3>
+                    <h3 class="text-base font-bold">轉化你的<br>專業價值</h3>
                 </div>
             </div>
 
-            <p class="text-lg md:text-2xl font-serif-italic opacity-80 leading-relaxed max-w-3xl mx-auto">
+            <p class="text-sm md:text-lg font-serif-italic opacity-80 leading-relaxed max-w-3xl mx-auto">
                 當內在與外在對齊，<br class="md:hidden">你的個人品牌就能自然而有溫度的呈現，<br>
                 <span class="gold-text font-bold">流量自然而然就來了。</span>
             </p>
@@ -483,30 +483,46 @@
                     
                     <!-- Right Side: 3 Videos (9:16 Vertical) - Size increased by giving column more width (lg:w-3/5) -->
                     <div class="w-full lg:w-3/5 mt-8 lg:mt-0 grid grid-cols-1 sm:grid-cols-3 gap-3">
-                        <!-- Video 1 (Original) -->
+                        <!-- Video 1 -->
                         <div class="flex flex-col gap-2">
                             <span class="text-center text-white/90 text-sm font-bold tracking-widest">你是不是</span>
-                            <div class="aspect-[9/16] w-full rounded-xl overflow-hidden border border-[#c9a67a]/30 shadow-lg relative" style="box-sizing: border-box; background: transparent;">
+                            <!-- Applied strict masking and max-width like the working video -->
+                            <div class="aspect-[9/16] w-full max-w-[280px] mx-auto rounded-2xl border border-white/10 overflow-hidden relative shadow-lg" style="box-sizing: border-box; transform: translateZ(0);">
                                 <div class="vertical-video-wrapper">
-                                    <iframe src="https://drive.google.com/file/d/1aHvR0BNRP0hku-XYLtHEAy_sojLbjq55/preview" frameborder="0" allow="autoplay; fullscreen" allowfullscreen scrolling="no"></iframe>
+                                    <iframe src="https://drive.google.com/file/d/1aHvR0BNRP0hku-XYLtHEAy_sojLbjq55/preview" 
+                                            frameborder="0" 
+                                            allow="autoplay; fullscreen; picture-in-picture" 
+                                            allowfullscreen 
+                                            scrolling="no">
+                                    </iframe>
                                 </div>
                             </div>
                         </div>
                         <!-- Video 2 -->
                         <div class="flex flex-col gap-2">
                             <span class="text-center text-white/90 text-sm font-bold tracking-widest">第一次拍</span>
-                            <div class="aspect-[9/16] w-full rounded-xl overflow-hidden border border-[#c9a67a]/30 shadow-lg relative" style="box-sizing: border-box; background: transparent;">
+                            <div class="aspect-[9/16] w-full max-w-[280px] mx-auto rounded-2xl border border-white/10 overflow-hidden relative shadow-lg" style="box-sizing: border-box; transform: translateZ(0);">
                                 <div class="vertical-video-wrapper">
-                                    <iframe src="https://drive.google.com/file/d/18W2q77arlZmahJZe7OQL7hCDnM8aNJph/preview" frameborder="0" allow="autoplay; fullscreen" allowfullscreen scrolling="no"></iframe>
+                                    <iframe src="https://drive.google.com/file/d/18W2q77arlZmahJZe7OQL7hCDnM8aNJph/preview" 
+                                            frameborder="0" 
+                                            allow="autoplay; fullscreen; picture-in-picture" 
+                                            allowfullscreen 
+                                            scrolling="no">
+                                    </iframe>
                                 </div>
                             </div>
                         </div>
                         <!-- Video 3 -->
                         <div class="flex flex-col gap-2">
                             <span class="text-center text-white/90 text-sm font-bold tracking-widest">害怕鏡頭</span>
-                            <div class="aspect-[9/16] w-full rounded-xl overflow-hidden border border-[#c9a67a]/30 shadow-lg relative" style="box-sizing: border-box; background: transparent;">
+                            <div class="aspect-[9/16] w-full max-w-[280px] mx-auto rounded-2xl border border-white/10 overflow-hidden relative shadow-lg" style="box-sizing: border-box; transform: translateZ(0);">
                                 <div class="vertical-video-wrapper">
-                                    <iframe src="https://drive.google.com/file/d/1EAKRBpazu-9ftQbCqplm7iCFUXaET4FF/preview" frameborder="0" allow="autoplay; fullscreen" allowfullscreen scrolling="no"></iframe>
+                                    <iframe src="https://drive.google.com/file/d/1EAKRBpazu-9ftQbCqplm7iCFUXaET4FF/preview" 
+                                            frameborder="0" 
+                                            allow="autoplay; fullscreen; picture-in-picture" 
+                                            allowfullscreen 
+                                            scrolling="no">
+                                    </iframe>
                                 </div>
                             </div>
                         </div>
