--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         .modal-overlay { background-color: rgba(30, 25, 22, 0.98); backdrop-filter: blur(20px); z-index: 100; padding: 1rem; }
         .modal-content { border: 1px solid rgba(201, 166, 122, 0.3); max-height: 92vh; overflow-y: auto; }
         
-        /* ✅ 絕對穩定的影片容器修正 (Padding Hack) */
+        /* ✅ 修復後的影片容器 */
         .video-box-fix {
             width: 100%;
             position: relative;
@@ -229,8 +229,6 @@
             <!-- Buttons removed as requested -->
         </div>
     </section>
-
-    <!-- Removed Sections: Pain Points, Pathfinder, Brand Authority, Unique Feature, Core Solutions -->
 
     <!-- 2. Pricing Plans (服務項目：拍攝企劃) - MOVED HERE -->
     <section class="py-20 md:py-32 bg-[#342c27]" id="plans">
